[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TMET"
version = "0.1.0"
description = "Mother Machine Microscopy Experiments Tools (3MET)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "3MET contributors" },
]
keywords = [
    "mother machine",
    "microscopy",
    "image processing",
    "time lapse",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "imagecodecs>=2023.0",
    "numpy>=1.23",
    "opencv-python>=4.8",
    "tifffile>=2023.0",
]

[project.scripts]
TMET = "TMET.cli:main"
tmet = "TMET.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["TMET*"]
